@@ -164,6 +164,21 @@ public interface CommonRadar<T>
     public boolean isPointOnRadar(Vector2f worldLoc, float padding);
 
     /**
+     * Checks if a point in world space is visible on the radar.
+     * <p>
+     * @param worldLocX The X coordinate of the point to check.
+     * @param worldLocY The Y coordinate of the point to check.
+     * @param padding   Extra distance from {@code worldLoc} to include in the
+     *                  check, usually an object's radius.
+     * <p>
+     * @return Whether the point at {{@code worldLocX},{@code wolrdLocY}} is
+     *         within {@code padding} su of being visible on the radar.
+     * <p>
+     * @since 2.2
+     */
+    public boolean isPointOnRadar(float worldLocX, float worldLocY, float padding);
+
+    /**
      * Converts a point from world space to radar space. Used to know where to
      * draw on the radar.
      * <p>
